# pileup-aadr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_extract.py
design/: v0.3-design-note.md
pileup_aadr/: __init__.py  __main__.py  chrom_lengths.py  cli.py  concurrency.py  counters.py  coverage_cmd.py  coverage_impl.py  dict_resolve.py  errors.py  extract_cmd.py  extract_orch.py  format_detect.py  inspect_cmd.py  inspect_impl.py  lift.py  logging_config.py  output.py  pileup_call.py  ref_resolve.py  rejoin.py  shard.py  sites_vcf.py  tool_wrapper.py  transform.py  types.py  validate_cmd.py  validate_impl.py
pileup_aadr/data/: .gitkeep  hg19ToHg38.over.chain.gz.sha256
scripts/: regen_lld19_baseline.sh
tests/: conftest.py  test_chrom_lengths.py  test_concurrency.py  test_coverage.py  test_dict_resolve.py  test_errors.py  test_extract_cmd.py  test_extract_orch.py  test_format_detect.py  test_inspect_cmd.py  test_lift_chain.py  test_lift_stage1.py  test_output.py  test_pileup_call.py  test_ref_resolve.py  test_rejoin.py  test_shard.py  test_sites_vcf.py  test_tool_wrapper.py  test_transform.py  test_validate_cmd.py
tests/fixtures/: aadr_chr22_slice.snp
tests/fixtures/stderr/: picard_clean.stderr  picard_partial_yield.stderr  pileupcaller_clean.stderr  pileupcaller_scientific.stderr
tests/integration/: conftest.py  test_lld19_full_chain.py  test_pgen_samplebind_composition.py  test_real_binaries.py
tests/integration/fixtures/lld19/: README.md
tests/integration/fixtures/lld19/aadr_ref/: aadr_chr22_5pops.geno  aadr_chr22_5pops.ind  aadr_chr22_5pops.snp
tests/integration/fixtures/lld19/baseline/: extract.report.json  f2_baseline.rds
tests/integration/fixtures/lld19/pileup_aadr_output/: extract_out.geno  extract_out.ind  extract_out.pseudohaploid.json  extract_out.snp
